--- a/src/Pipfile
+++ b/src/Pipfile
@@ -4,8 +4,8 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "==2.1.1"
-flask-restx = "==0.5.1"
+werkzeug = "==2.0.*"
+flask = "*"
 
 [dev-packages]
 
